--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,17 +1,53 @@
 * {
 	margin: 0;	
+	padding: 0;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+	font-size: 15px;
 }
 
 li {
 	list-style-type: none;
 }
 
+.site-wrapper {
+	margin: 3em;
+	padding: 1em;
+}
+
+.button-bar {
+	display: flex;
+	justify-content: space-between;
+	justify-items: space-between;
+	gap: 2em;
+}
+
+.button-bar-child {
+	flex: auto;
+	display: flex;
+	justify-content: space-between;
+	gap: 1em;
+}
+
+.button-bar-chil,.button-bar-child-right {
+	justify-content: flex-end;
+}
+
+.main-buttons {
+	flex: 1;
+}
+
 .plant-view {
 	display: grid;
 	grid-template-rows: 30% 30% 30%;
 	grid-template-columns: 30% 30% 30%;
+	gap: 2em;
 	color: red;
-	
+	justify-content: space-between;
+}
+
+.plant-container {
+	border-style: solid;
+	border-color: green;
+	border-radius: 1px;
+
 }
